tests/phase_00_lexer_errors/invalid/09_malformed_float_multiple_dots.hulk
// Idealmente el lexer deberia marcar 1.2.3 como numero mal formado,
// o partirlo en tokens de forma que luego sea facil detectarlo en parser.
1.2.3;
